 * Improved Filesystem Hierarchy Standard (FHS) compliance (#762)
 * More tests

Bug fixes
 * jpgraph version bump to 3.0.7. Fixes RHEL 6 issues. (#1244)
 * Fixed encoding issues in the captive portal (#1115)
 * Fixed redirect loop on the captive portal if VLAN reassignment failed (#1260)
 * Fixes issues with accentuated characters and single quotes in some captive
   portal strings
 * Cisco C3560 now heritates the Cisco C2960 code
 * Fixed distro portability problems (#1185, #1187, #1248)
 * Additional fixes to nessus scans
 * Renaming Nortel ERS modules (#1238)
 * Interim fixes (#1239, #1240)

Translations
 * Updated Spanish (es) translation (Thanks to Juan Camilo Valencia)

--------------------------------------------------------------------------------
Version <version> released on <releaseDate>

New Hardware Support
 * Avaya/Nortel switches now support the floating network device feature
 * Dlink DWL Access-Point support
 * LG-Ericsson iPecs 4500 support for MAC Authentication/802.1X

New Features
 * Ability to view log files from the Web Administration interface (#1080)

Enhancements
 * Added ldap port option to Web Admin LDAP (AD) authentication
 * New DHCP fingerprints for Mac OS X Lion, Fedora 14, Polycom, Aastra, 
   LifeSize, Nortel, Polycom and Snom Conferencing and VoIP, Ubuntu 11.04, 
   Belkin Wireless Router, HP ProCurve switches, Androids, Zebra, Kyocera, HP 
   and Xerox printers, NEC Projectors, Polycom Video Conferencing and Paradox
   Card Access module
 * New controllerIp network device parameter will make it simpler to support
   wireless hardware working in bridged mode
 * Developer documentation to add Floating Network Devices support to switches
 * Minor usability improvements

Bug fixes
 * Fixed issues with several switches if node MAC address falls into an Hex to
   ASCII printable range (#1098)
 * Fixed OS violations regression introduced in 2.2.0
 * Fixed Avaya/Nortel switches problems on ERS2500 / ERS4500 (at least)