@@ -71,6 +71,8 @@ Bug fixes
  * Fixed redirect loop on the captive portal if VLAN reassignment failed (#1260)
  * Fixes issues with accentuated characters and single quotes in some captive
    portal strings
+ * Fixed accidental stop/restart of services because administrative where done
+   in GET instead of POST (#1119)
  * Cisco C3560 now heritates the Cisco C2960 code
  * Fixed distro portability problems (#1185, #1187, #1248)
  * Additional fixes to nessus scans
